replace with correct function
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@34915 52c4871e-980c-0410-b1e0-e73912ce01f8

Former-commit-id: 2a8c50fec10a83757c434ece11de8c7f5efa5a9a

--- a/src/router/kromo/common/Info.htm
+++ b/src/router/kromo/common/Info.htm
@@ -235,7 +235,7 @@ function refresh(F)
 									</div>
 									<div class="setting">
 										<div class="label"><% tran("status_router.sys_model"); %></div>
-										<% nvg("DD_BOARD"); %>&nbsp;
+										<% get_sysmodel(); %>
 									</div>
 									<div class="setting">
 										<div class="label">LAN MAC</div>
