--- a/src/router/kromo/common/Info.htm
+++ b/src/router/kromo/common/Info.htm
@@ -285,7 +285,7 @@ function refresh(F)
 									<% show_wifiselect(); %>
 									<div class="setting">
 										<div class="label"><% tran("wl_basic.radio"); %></div>
-										<span id="wl_radio"><% get_radio_state(); %></span>&nbsp;
+										<span id="wl_radio"><% get_radio_statejs(); %></span>&nbsp;
 									</div>
 									<div class="setting">
 										<div class="label"><% tran("share.mode"); %></div>
